# nixos

./: .envrc  .gitignore  .pre-commit-config.yaml  .sops.yaml  .treefmt.toml  .vulnix-whitelist.toml  AGENTS.md  CONTEXT.md  README.md  configuration.nix  container-service.skill  devenv.nix  docs.config.json  flake.nix  home.nix  justfile  opencode.json  renovate.json
.github/: dependabot.yml
assets/: zen.user.js
docs/: INSTALLATION.md  TODO.md  renovate-security.md  security-scanning.md
home-manager-modules/: base.nix
lib/: README.md  icon-overrides.nix
modules/: audio.nix  common.nix  default.nix  desktop.nix  dotfiles.nix  flatpak.nix  fonts.nix  gtk.nix  homebrew.nix  hyprland.nix  i18n.nix  nas.nix  packages.nix  preheat.nix  preload.nix  programs.nix  security.nix  services.nix  sops.nix  themes.nix  users.nix  virtualization.nix  vpn.nix  win11-icons.nix
modules-system/: default.nix  i18n.nix  vpn.nix
modules/development/workspaces/ocr-tools/: pyproject.toml
modules/development/workspaces/ocr-tools/src/ocr_tools/: __init__.py
scripts/: atticd-diagnose.sh  bootstrap-age.sh  bootstrap-gpg.sh  bootstrap-machine.sh  check-service-ports.sh  cleanup-disk.sh  dns-status.sh  download-hyprwhspr-parakeet-model.sh  install-pre-commit-hook.sh  install.sh  lint.sh  maintain-chromium-apps.sh  network-recover.sh  network-recovery-check.sh  network-status.sh  pre-commit-wrapper.sh  resolve-lazy-desktop-icon.sh  rotate-gpg-gist.sh  setup-u2f.sh  sync-wallpaper.sh  update-avatar.sh  update-local-package.sh  update-sops-keys.sh
secrets/: README.md  apis.yaml  (+4 more)
(+419 files in other folders)
